force-app/main/default/objects/Default_Address__c/Default_Address__c.object-meta.xml
<CustomObject>
    <label>Default Address</label>
    <nameField>
        <displayFormat>DFA-{000000}</displayFormat>
        <label>Default Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>