force-app/main/default/objects/Default_Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Default Address</relationshipLabel>
    <relationshipName>Default_Address</relationshipName>
    <type>Lookup</type>
</CustomField>