force-app/main/default/objects/Default_Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Default Address</relationshipLabel>
    <relationshipName>Default_Address</relationshipName>
    <type>Lookup</type>
</CustomField>