force-app/main/default/objects/Default_Address__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>District</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>Default Address</relationshipLabel>
    <relationshipName>Default_Address</relationshipName>
    <type>Lookup</type>
</CustomField>