force-app/main/default/objects/Default_Address__c/fields/District_text__c.field-meta.xml
<CustomField>
    <fullName>District_text__c</fullName>
    <label>District text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>