force-app/main/default/objects/Default_Address__c/fields/Province_text__c.field-meta.xml
<CustomField>
    <fullName>Province_text__c</fullName>
    <label>Province text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>